initial html developer branch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="parent_div"> 
         <div class="child_div">
-            <p>Welcome to World!!</p>
+            <p>Welcome to Word!!</p>
         </div>
     </div>
 </body>
